Minor change (reword)

--- a/wav/readme.Rmd
+++ b/wav/readme.Rmd
@@ -3,8 +3,9 @@
 library("seewave")
 library("tuneR")
 
-summaryAndPlot = function(x){
-  # summary(x)
+summaryAndPlot = function(name){
+  x = readWave(input=name)
+  summary(x)
   spectro(x)
 }
 
